--- a/index.html
+++ b/index.html
@@ -30,39 +30,31 @@
 </section>
 
 <!-- PRODUCTS -->
-<section class="products" id="products">
-    <h2>Popular Products</h2>
-
-    <div class="product-grid">
-
-        <div class="product-card">
-            <img src="images/urun1.jpg" alt="Oversized T-Shirt">
-            <h3>Oversized T-Shirt</h3>
-            <p class="price">$19.99</p>
-            <button onclick="addToCart('Oversized T-Shirt', 19.99)">
-                Add to Cart
-            </button>
-        </div>
-
-        <div class="product-card">
-            <img src="images/urun2.jpg" alt="Denim Jacket">
-            <h3>Denim Jacket</h3>
-            <p class="price">$49.99</p>
-            <button onclick="addToCart('Denim Jacket', 49.99)">
-                Add to Cart
-            </button>
-        </div>
-
-        <div class="product-card">
-            <img src="images/urun3.jpg" alt="Sneakers">
-            <h3>Sneakers</h3>
-            <p class="price">$79.99</p>
-            <button onclick="addToCart('Sneakers', 79.99)">
-                Add to Cart
-            </button>
-        </div>
-
+<section id="products" class="products-section">
+  <h2>Our Products</h2>
+  <div class="products-container">
+    <!-- Ürün 1 -->
+    <div class="product-card">
+      <img src="images/urun1.jpg" alt="T-Shirt">
+      <h3>Oversized T-Shirt</h3>
+      <p class="price">$29.99</p>
+      <button onclick="addToCart('Oversized T-Shirt', 29.99)">Add to Cart</button>
     </div>
+    <!-- Ürün 2 -->
+    <div class="product-card">
+      <img src="images/urun2.jpg" alt="Luxury Jacket">
+      <h3>Luxury Jacket</h3>
+      <p class="price">$99.99</p>
+      <button onclick="addToCart('Luxury Jacket', 99.99)">Add to Cart</button>
+    </div>
+    <!-- Ürün 3 -->
+    <div class="product-card">
+      <img src="images/urun3.jpg" alt="Premium Sneakers">
+      <h3>Premium Sneakers</h3>
+      <p class="price">$79.99</p>
+      <button onclick="addToCart('Premium Sneakers', 79.99)">Add to Cart</button>
+    </div>
+  </div>
 </section>
 
 <!-- FOOTER -->
