--- a/index.html
+++ b/index.html
@@ -1,76 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Style & Trend</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Style & Trend</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<!-- NAVBAR -->
-<header class="navbar">
-    <div class="logo">Style<span>&</span>Trend</div>
+  <!-- HEADER -->
+  <header>
+    <h1>Style & Trend</h1>
     <nav>
-        <a href="index.html">Home</a>
-        <a href="#products">Products</a>
-        <a href="cart.html">Cart</a>
-        <a href="about.html">About</a>
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="products.html">Products</a>
+      <a href="contact.html">Contact</a>
+      <span id="cart-count" class="cart-count">0</span>
     </nav>
-</header>
+  </header>
 
-<!-- HERO -->
-<section class="hero">
+  <!-- HERO SECTION -->
+  <section class="hero">
     <div class="hero-content">
-        <h1>Discover Your Style</h1>
-        <p>Refresh your look with the latest fashion trends</p>
-        <button onclick="document.getElementById('products').scrollIntoView()">
-            Start Shopping
-        </button>
+      <h1>Discover Luxury Fashion</h1>
+      <p>Premium clothing collections for modern style.</p>
+      <a href="products.html"><button>Shop Now</button></a>
     </div>
-</section>
+  </section>
 
-<!-- PRODUCTS -->
-<section id="products" class="products-section">
-  <h2>Our Products</h2>
-  <div class="products-container">
-    <!-- Ürün 1 -->
-    <div class="product-card">
-      <img src="images/urun1.jpg" alt="T-Shirt">
-      <h3>Oversized T-Shirt</h3>
-      <p class="price">$29.99</p>
-      <button onclick="addToCart('Oversized T-Shirt', 29.99)">Add to Cart</button>
-    </div>
-    <!-- Ürün 2 -->
-    <div class="product-card">
-      <img src="images/urun2.jpg" alt="Luxury Jacket">
-      <h3>Luxury Jacket</h3>
-      <p class="price">$99.99</p>
-      <button onclick="addToCart('Luxury Jacket', 99.99)">Add to Cart</button>
-    </div>
-    <!-- Ürün 3 -->
-    <div class="product-card">
-      <img src="images/urun3.jpg" alt="Premium Sneakers">
-      <h3>Premium Sneakers</h3>
-      <p class="price">$79.99</p>
-      <button onclick="addToCart('Premium Sneakers', 79.99)">Add to Cart</button>
-    </div>
-  </div>
-</section>
+  <!-- ABOUT SECTION -->
+  <section id="about" class="about-section">
+    <h2>About Us</h2>
+    <p>Founded in 2026, Style & Trend brings you the finest in fashion and lifestyle. Our collections focus on elegance, quality, and timeless style.</p>
+    <p>We believe in sustainable fashion and creating pieces that make you feel confident and stylish every day.</p>
+    <iframe 
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3023.756228188343!2d29.35694531534833!3d40.85042337931471!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14cac11b3d1779e5%3A0x4f1b5b9e53e21f69!2sTuzla%2C%20Istanbul!5e0!3m2!1sen!2str!4v1617683085274!5m2!1sen!2str" 
+      allowfullscreen="" 
+      loading="lazy">
+    </iframe>
+    <p>Phone: +90 5XX XXX XX XX</p>
+  </section>
 
-<!-- FOOTER -->
-<footer>
-    <p>© 2026 Style & Trend. All Rights Reserved.</p>
-</footer>
+  <!-- FOOTER -->
+  <footer>
+    <p>© 2026 Style & Trend | Follow us on social media</p>
+  </footer>
 
-<!-- JAVASCRIPT -->
-<script>
-function addToCart(name, price) {
-    let cart = JSON.parse(localStorage.getItem("cart")) || [];
-    cart.push({ name: name, price: price });
-    localStorage.setItem("cart", JSON.stringify(cart));
-    alert("Product added to cart 🛒");
-}
-</script>
+  <!-- CART SCRIPT -->
+  <script>
+    let cart = [];
+    function addToCart(name, price) {
+      cart.push({ name, price });
+      localStorage.setItem("cart", JSON.stringify(cart));
+      alert(`${name} has been added to your cart!`);
+      updateCartCount();
+    }
+
+    function updateCartCount() {
+      const count = cart.length;
+      const cartCount = document.getElementById("cart-count");
+      if(cartCount) cartCount.textContent = count;
+    }
+
+    window.onload = () => {
+      if(localStorage.getItem("cart")) {
+        cart = JSON.parse(localStorage.getItem("cart"));
+        updateCartCount();
+      }
+    };
+  </script>
 
 </body>
 </html>
