--- a/products.html
+++ b/products.html
@@ -15,7 +15,7 @@
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
       <a href="products.html">Products</a>
-      <a href="contact.html">Contact</a>
+      <a href="blog.html">Blog</a>
       <span id="cart-count" class="cart-count">0</span>
     </nav>
   </header>
@@ -56,7 +56,6 @@
     function addToCart(name, price) {
       cart.push({ name, price });
       localStorage.setItem("cart", JSON.stringify(cart));
-      alert(`${name} has been added to your cart!`);
       updateCartCount();
     }
 
