--- a/products.html
+++ b/products.html
@@ -2,76 +2,74 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <title>Products | Style & Trend</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Products - Style & Trend</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-  <!-- HEADER -->
-  <header>
-    <h1>Style & Trend</h1>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="about.html">About</a>
-      <a href="products.html">Products</a>
-      <a href="blog.html">Blog</a>
-      <span id="cart-count" class="cart-count">0</span>
-    </nav>
-  </header>
+<!-- HEADER -->
+<header class="navbar">
+  <div class="logo">Style<span>&</span>Trend</div>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
+    <a href="products.html">Products</a>
+    <a href="contact.html">Contact</a>
+  </nav>
+</header>
 
-  <!-- PRODUCTS SECTION -->
-  <section id="products" class="products-section">
-    <h2>Our Products</h2>
-    <div class="products-container">
-      <div class="product-card">
-        <img src="images/urun1.jpg" alt="T-Shirt">
+<!-- PRODUCTS -->
+<section class="products-page">
+  <h1>Our Collection</h1>
+  <p class="subtitle">Carefully selected pieces for modern style</p>
+
+  <div class="products-grid">
+
+    <div class="product-card-new">
+      <img src="images/urun1.jpg" alt="Oversized T-Shirt">
+      <div class="product-info">
         <h3>Oversized T-Shirt</h3>
-        <p class="price">$29.99</p>
+        <span>$29.99</span>
         <button onclick="addToCart('Oversized T-Shirt', 29.99)">Add to Cart</button>
       </div>
-      <div class="product-card">
-        <img src="images/urun2.jpg" alt="Luxury Jacket">
+    </div>
+
+    <div class="product-card-new">
+      <img src="images/urun2.jpg" alt="Luxury Jacket">
+      <div class="product-info">
         <h3>Luxury Jacket</h3>
-        <p class="price">$99.99</p>
+        <span>$99.99</span>
         <button onclick="addToCart('Luxury Jacket', 99.99)">Add to Cart</button>
       </div>
-      <div class="product-card">
-        <img src="images/urun3.jpg" alt="Premium Sneakers">
+    </div>
+
+    <div class="product-card-new">
+      <img src="images/urun3.jpg" alt="Premium Sneakers">
+      <div class="product-info">
         <h3>Premium Sneakers</h3>
-        <p class="price">$79.99</p>
+        <span>$79.99</span>
         <button onclick="addToCart('Premium Sneakers', 79.99)">Add to Cart</button>
       </div>
     </div>
-  </section>
 
-  <!-- FOOTER -->
-  <footer>
-    <p>© 2026 Style & Trend | Follow us on social media</p>
-  </footer>
+  </div>
+</section>
 
-  <!-- CART SCRIPT -->
-  <script>
-    let cart = [];
-    function addToCart(name, price) {
-      cart.push({ name, price });
-      localStorage.setItem("cart", JSON.stringify(cart));
-      updateCartCount();
-    }
+<!-- FOOTER -->
+<footer>
+  © 2026 Style & Trend
+</footer>
 
-    function updateCartCount() {
-      const count = cart.length;
-      const cartCount = document.getElementById("cart-count");
-      if(cartCount) cartCount.textContent = count;
-    }
+<script>
+let cart = JSON.parse(localStorage.getItem("cart")) || [];
 
-    window.onload = () => {
-      if(localStorage.getItem("cart")) {
-        cart = JSON.parse(localStorage.getItem("cart"));
-        updateCartCount();
-      }
-    };
-  </script>
+function addToCart(name, price) {
+  cart.push({ name, price });
+  localStorage.setItem("cart", JSON.stringify(cart));
+  alert(name + " added to cart");
+}
+</script>
 
 </body>
 </html>
