--- a/products.html
+++ b/products.html
@@ -8,47 +8,45 @@
 </head>
 <body>
 
-<!-- HEADER -->
 <header class="navbar">
   <div class="logo">Style<span>&</span>Trend</div>
   <nav>
     <a href="index.html">Home</a>
-    <a href="about.html">About</a>
     <a href="products.html">Products</a>
+    <a href="about.html">About</a>
     <a href="contact.html">Contact</a>
   </nav>
 </header>
 
-<!-- PRODUCTS -->
 <section class="products-page">
-  <h1>Our Collection</h1>
-  <p class="subtitle">Carefully selected pieces for modern style</p>
+  <h1>Our Products</h1>
+  <p class="subtitle">Modern pieces designed for everyday luxury</p>
 
   <div class="products-grid">
 
-    <div class="product-card-new">
+    <div class="product-card">
       <img src="images/urun1.jpg" alt="Oversized T-Shirt">
       <div class="product-info">
         <h3>Oversized T-Shirt</h3>
-        <span>$29.99</span>
+        <p class="price">$29.99</p>
         <button onclick="addToCart('Oversized T-Shirt', 29.99)">Add to Cart</button>
       </div>
     </div>
 
-    <div class="product-card-new">
+    <div class="product-card">
       <img src="images/urun2.jpg" alt="Luxury Jacket">
       <div class="product-info">
         <h3>Luxury Jacket</h3>
-        <span>$99.99</span>
+        <p class="price">$99.99</p>
         <button onclick="addToCart('Luxury Jacket', 99.99)">Add to Cart</button>
       </div>
     </div>
 
-    <div class="product-card-new">
+    <div class="product-card">
       <img src="images/urun3.jpg" alt="Premium Sneakers">
       <div class="product-info">
         <h3>Premium Sneakers</h3>
-        <span>$79.99</span>
+        <p class="price">$79.99</p>
         <button onclick="addToCart('Premium Sneakers', 79.99)">Add to Cart</button>
       </div>
     </div>
@@ -56,7 +54,6 @@
   </div>
 </section>
 
-<!-- FOOTER -->
 <footer>
   © 2026 Style & Trend
 </footer>
