--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 </head>
 <body>
 
-<!-- HEADER -->
 <header class="navbar">
   <div class="logo">Style<span>&</span>Trend</div>
   <nav>
@@ -23,81 +22,37 @@
 <section class="hero-modern">
   <div class="hero-overlay"></div>
   <div class="hero-text">
-    <h1>Discover Your Style</h1>
-    <p>
-      Premium fashion pieces, trend insights and modern looks  
-      designed to elevate your everyday style.
-    </p>
-    <a href="products.html" class="hero-btn">Explore Collection</a>
+    <h1>Modern Fashion, Timeless Style</h1>
+    <p>Luxury, streetwear and casual pieces designed for today.</p>
   </div>
 </section>
 
 <!-- CATEGORIES -->
 <section class="categories">
-  <h2>Fashion Categories</h2>
+  <h2>Shop by Style</h2>
 
   <div class="category-grid">
+
     <div class="category-card">
-      <img src="images/collection1.jpg" alt="">
+      <img src="images/streetwear.jpg" alt="Streetwear">
       <span>Streetwear</span>
     </div>
 
     <div class="category-card">
-      <img src="images/collection2.jpg" alt="">
+      <img src="images/luxury.jpg" alt="Luxury">
       <span>Luxury</span>
     </div>
 
     <div class="category-card">
-      <img src="images/collection3.jpg" alt="">
+      <img src="images/casual.jpg" alt="Casual">
       <span>Casual</span>
     </div>
 
-    <div class="category-card">
-      <img src="images/urun3.jpg" alt="">
-      <span>Trends 2026</span>
-    </div>
   </div>
 </section>
 
-<!-- FEATURED -->
-<section class="featured">
-  <h2>Editor's Picks</h2>
-
-  <div class="featured-grid">
-    <div class="featured-card">
-      <img src="images/urun1.jpg">
-      <h3>Oversized T-Shirt</h3>
-      <p>Minimal, modern and timeless fit.</p>
-    </div>
-
-    <div class="featured-card">
-      <img src="images/urun2.jpg">
-      <h3>Luxury Jacket</h3>
-      <p>High-end craftsmanship for bold looks.</p>
-    </div>
-
-    <div class="featured-card">
-      <img src="images/urun3.jpg">
-      <h3>Premium Sneakers</h3>
-      <p>Comfort meets modern design.</p>
-    </div>
-  </div>
-</section>
-
-<!-- NEWSLETTER -->
-<section class="newsletter">
-  <h2>Join Our Community</h2>
-  <p>Get style tips, trends and exclusive offers</p>
-
-  <form>
-    <input type="email" placeholder="Your email address">
-    <button type="submit">Subscribe</button>
-  </form>
-</section>
-
-<!-- FOOTER -->
 <footer>
-  © 2026 Style & Trend · All Rights Reserved
+  © 2026 Style & Trend
 </footer>
 
 </body>
