--- a/index.html
+++ b/index.html
@@ -18,12 +18,11 @@
   </nav>
 </header>
 
-<!-- HERO -->
-<section class="hero-modern">
-  <div class="hero-overlay"></div>
-  <div class="hero-text">
-    <h1>Modern Fashion, Timeless Style</h1>
-    <p>Luxury, streetwear and casual pieces designed for today.</p>
+<!-- HERO (ARTIK TAM EKRAN DEĞİL) -->
+<section class="hero">
+  <div class="hero-content">
+    <h1>Modern Fashion</h1>
+    <p>Streetwear · Luxury · Casual</p>
   </div>
 </section>
 
