--- a/about.html
+++ b/about.html
@@ -1,36 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>About | Style & Trend</title>
-<link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <title>About | Style & Trend</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <header class="navbar">
-    <div class="logo">Style<span>&</span>Trend</div>
-    <nav>
-        <a href="index.html">Home</a>
-        <a href="cart.html">Cart</a>
-    </nav>
+  <a href="index.html" class="logo">Style<span>&</span>Trend</a>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="products.html">Products</a>
+    <a href="about.html">About</a>
+    <a href="contact.html">Contact</a>
+  </nav>
 </header>
 
 <section class="about">
-    <h1>About Us</h1>
-    <p>We are a fashion brand based in Istanbul, Turkey.</p>
-
-    <h3>📍 Location</h3>
-    <iframe
-        src="https://www.google.com/maps?q=Tuzla%20Istanbul&output=embed">
-    </iframe>
-
-    <h3>📞 Contact</h3>
-    <p>+90 532 847 29 61</p>
+  <h1>About Us</h1>
+  <p>
+    Style & Trend is a modern fashion brand focused on
+    combining street culture with refined luxury.
+  </p>
+  <p>
+    Our collections are designed for people who value
+    simplicity, quality and confidence.
+  </p>
 </section>
 
-<footer>
-    <p>© 2026 Style & Trend</p>
-</footer>
+<footer>© 2026 Style & Trend</footer>
 
 </body>
 </html>
