--- a/products.html
+++ b/products.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Products | Style & Trend</title>
+  <title>Products</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <header class="navbar">
-  <div class="logo">Style<span>&</span>Trend</div>
+  <a href="index.html" class="logo">Style<span>&</span>Trend</a>
   <nav>
     <a href="index.html">Home</a>
     <a href="products.html">Products</a>
@@ -19,50 +19,37 @@
 </header>
 
 <section class="products-page">
-  <h1>Our Products</h1>
-  <p class="subtitle">Modern pieces for everyday style</p>
+  <h1>Products</h1>
 
   <div class="products-grid">
 
     <div class="product-card">
       <div class="product-image">
-        <img src="images/urun1.jpg" alt="Oversized T-Shirt">
+        <img src="images/urun1.jpg">
       </div>
       <div class="product-info">
         <h3>Oversized T-Shirt</h3>
         <p class="price">$29.99</p>
-        <button>Add to Cart</button>
+        <button onclick="addToCart('Oversized T-Shirt')">Add to Cart</button>
       </div>
     </div>
 
     <div class="product-card">
       <div class="product-image">
-        <img src="images/urun2.jpg" alt="Luxury Jacket">
+        <img src="images/urun2.jpg">
       </div>
       <div class="product-info">
         <h3>Luxury Jacket</h3>
         <p class="price">$99.99</p>
-        <button>Add to Cart</button>
-      </div>
-    </div>
-
-    <div class="product-card">
-      <div class="product-image">
-        <img src="images/urun3.jpg" alt="Premium Sneakers">
-      </div>
-      <div class="product-info">
-        <h3>Premium Sneakers</h3>
-        <p class="price">$79.99</p>
-        <button>Add to Cart</button>
+        <button onclick="addToCart('Luxury Jacket')">Add to Cart</button>
       </div>
     </div>
 
   </div>
 </section>
 
-<footer>
-  © 2026 Style & Trend
-</footer>
+<footer>© 2026 Style & Trend</footer>
 
+<script src="cart.js"></script>
 </body>
 </html>
