--- a/about.html
+++ b/about.html
@@ -18,19 +18,28 @@
   </nav>
 </header>
 
-<section class="about">
+<section class="about-page">
   <h1>About Us</h1>
+
   <p>
-    Style & Trend is a modern fashion brand focused on
-    combining street culture with refined luxury.
+    Founded in 2026, Style & Trend is a fashion brand based in Istanbul,
+    combining street culture with modern luxury.
   </p>
+
   <p>
-    Our collections are designed for people who value
-    simplicity, quality and confidence.
+    Our mission is to create timeless collections that reflect confidence,
+    individuality, and contemporary style.
+  </p>
+
+  <p>
+    Every product is designed with attention to detail, premium materials,
+    and a strong focus on comfort and aesthetics.
   </p>
 </section>
 
-<footer>© 2026 Style & Trend</footer>
+<footer>
+  © 2026 Style & Trend
+</footer>
 
 </body>
 </html>
