--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Contact</title>
+  <title>Contact | Style & Trend</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
 </head>
@@ -18,17 +18,16 @@
   </nav>
 </header>
 
-<section class="contact">
-  <h1>Contact Us</h1>
-  <form>
-    <input type="text" placeholder="Name">
-    <input type="email" placeholder="Email">
-    <textarea placeholder="Message"></textarea>
-    <button>Send Message</button>
-  </form>
+<section class="contact-page">
+  <h1>Contact</h1>
+  <p>Istanbul, Turkey</p>
+  <p>📞 +90 532 847 29 61</p>
+  <p>✉️ info@styletrend.com</p>
 </section>
 
-<footer>© 2026 Style & Trend</footer>
+<footer>
+  © 2026 Style & Trend
+</footer>
 
 </body>
 </html>
