--- a/products.html
+++ b/products.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Products</title>
+  <title>Products | Style & Trend</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
 </head>
@@ -19,29 +19,40 @@
 </header>
 
 <section class="products-page">
-  <h1>Products</h1>
+  <h1>Our Products</h1>
 
   <div class="products-grid">
 
     <div class="product-card">
       <div class="product-image">
-        <img src="images/urun1.jpg">
+        <img src="images/urun1.jpg" alt="">
       </div>
       <div class="product-info">
         <h3>Oversized T-Shirt</h3>
         <p class="price">$29.99</p>
-        <button onclick="addToCart('Oversized T-Shirt')">Add to Cart</button>
+        <button>Add to Cart</button>
       </div>
     </div>
 
     <div class="product-card">
       <div class="product-image">
-        <img src="images/urun2.jpg">
+        <img src="images/urun2.jpg" alt="">
       </div>
       <div class="product-info">
         <h3>Luxury Jacket</h3>
         <p class="price">$99.99</p>
-        <button onclick="addToCart('Luxury Jacket')">Add to Cart</button>
+        <button>Add to Cart</button>
+      </div>
+    </div>
+
+    <div class="product-card">
+      <div class="product-image">
+        <img src="images/urun3.jpg" alt="">
+      </div>
+      <div class="product-info">
+        <h3>Premium Sneakers</h3>
+        <p class="price">$79.99</p>
+        <button>Add to Cart</button>
       </div>
     </div>
 
@@ -50,6 +61,5 @@
 
 <footer>© 2026 Style & Trend</footer>
 
-<script src="cart.js"></script>
 </body>
 </html>
