--- a/index.html
+++ b/index.html
@@ -3,13 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <title>Style & Trend</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <header class="navbar">
-  <a href="index.html" class="logo">Style<span>&</span>Trend</a>
+  <h1 class="logo"><a href="index.html">Style<span>&</span>Trend</a></h1>
   <nav>
     <a href="index.html">Home</a>
     <a href="products.html">Products</a>
@@ -18,60 +17,63 @@
   </nav>
 </header>
 
-<!-- HERO -->
 <section class="hero">
-  <div class="hero-content">
-    <h1>Modern Fashion</h1>
-    <p>Streetwear · Luxury · Casual</p>
-    <a href="products.html" class="btn">Shop Now</a>
+  <h2>Modern Fashion</h2>
+  <p>Streetwear · Luxury · Casual</p>
+</section>
+
+<section class="styles">
+  <div class="style-card">
+    <img src="images/street.jpg">
+    <h3>Streetwear</h3>
+  </div>
+  <div class="style-card">
+    <img src="images/luxury.jpg">
+    <h3>Luxury</h3>
+  </div>
+  <div class="style-card">
+    <img src="images/casual.jpg">
+    <h3>Casual</h3>
   </div>
 </section>
 
-<!-- CATEGORIES -->
-<section class="categories">
-  <h2>Shop by Style</h2>
-  <div class="category-grid">
-    <div class="category-card">
-      <img src="images/streetwear.jpg">
-      <span>Streetwear</span>
-    </div>
-    <div class="category-card">
-      <img src="images/luxury.jpg">
-      <span>Luxury</span>
-    </div>
-    <div class="category-card">
-      <img src="images/casual.jpg">
-      <span>Casual</span>
-    </div>
-  </div>
-</section>
-
-<!-- BRAND STORY -->
-<section class="brand">
-  <h2>Designed for Modern Life</h2>
-  <p>
-    Style & Trend blends contemporary design with premium quality.
-    Every piece is crafted to elevate your everyday look while staying timeless.
-  </p>
-</section>
-
-<!-- FEATURED -->
-<section class="featured">
-  <h2>Why Style & Trend?</h2>
-  <div class="features">
-    <div class="feature-box">
+<section class="why-us">
+  <h2>Why Choose Us</h2>
+  <div class="why-grid">
+    <div>
       <h3>Premium Quality</h3>
-      <p>Carefully selected fabrics and modern tailoring.</p>
+      <p>Carefully selected materials and modern design.</p>
     </div>
-    <div class="feature-box">
-      <h3>Modern Design</h3>
-      <p>Inspired by global fashion and street culture.</p>
+    <div>
+      <h3>Fast Delivery</h3>
+      <p>Worldwide shipping with trusted partners.</p>
     </div>
-    <div class="feature-box">
-      <h3>Worldwide Style</h3>
-      <p>Designed in Istanbul, worn everywhere.</p>
+    <div>
+      <h3>Trusted Brand</h3>
+      <p>Thousands of happy customers.</p>
     </div>
   </div>
+</section>
+
+<section class="testimonials">
+  <h2>Customer Reviews</h2>
+  <div class="testimonial-grid">
+    <blockquote>
+      “Amazing quality and fast shipping.”
+      <span>— Alex M.</span>
+    </blockquote>
+    <blockquote>
+      “Minimal but premium feel.”
+      <span>— Sarah K.</span>
+    </blockquote>
+  </div>
+</section>
+
+<section class="newsletter">
+  <h2>Join Our Newsletter</h2>
+  <p>Get exclusive offers & style tips</p>
+  <input type="email" placeholder="Your email">
+  <button class="btn">Subscribe</button>
 </section>
 
 <footer>
