--- a/products.html
+++ b/products.html
@@ -2,14 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Products | Style & Trend</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Products</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <header class="navbar">
-  <a href="index.html" class="logo">Style<span>&</span>Trend</a>
+  <h1 class="logo"><a href="index.html">Style<span>&</span>Trend</a></h1>
   <nav>
     <a href="index.html">Home</a>
     <a href="products.html">Products</a>
@@ -18,48 +17,37 @@
   </nav>
 </header>
 
-<section class="products-page">
-  <h1>Our Products</h1>
+<section class="products-intro">
+  <h1>Our Collection</h1>
+  <p>Modern, stylish and affordable fashion pieces.</p>
+</section>
 
-  <div class="products-grid">
+<section class="products-grid">
+  <div class="product-card">
+    <img src="images/product1.jpg">
+    <h3>Street Jacket</h3>
+    <p>$89</p>
+    <button>Add to Cart</button>
+  </div>
 
-    <div class="product-card">
-      <div class="product-image">
-        <img src="images/urun1.jpg" alt="">
-      </div>
-      <div class="product-info">
-        <h3>Oversized T-Shirt</h3>
-        <p class="price">$29.99</p>
-        <button>Add to Cart</button>
-      </div>
-    </div>
+  <div class="product-card">
+    <img src="images/product2.jpg">
+    <h3>Luxury Hoodie</h3>
+    <p>$120</p>
+    <button>Add to Cart</button>
+  </div>
 
-    <div class="product-card">
-      <div class="product-image">
-        <img src="images/urun2.jpg" alt="">
-      </div>
-      <div class="product-info">
-        <h3>Luxury Jacket</h3>
-        <p class="price">$99.99</p>
-        <button>Add to Cart</button>
-      </div>
-    </div>
-
-    <div class="product-card">
-      <div class="product-image">
-        <img src="images/urun3.jpg" alt="">
-      </div>
-      <div class="product-info">
-        <h3>Premium Sneakers</h3>
-        <p class="price">$79.99</p>
-        <button>Add to Cart</button>
-      </div>
-    </div>
-
+  <div class="product-card">
+    <img src="images/product3.jpg">
+    <h3>Casual Shirt</h3>
+    <p>$65</p>
+    <button>Add to Cart</button>
   </div>
 </section>
 
-<footer>© 2026 Style & Trend</footer>
+<footer>
+  © 2026 Style & Trend
+</footer>
 
 </body>
 </html>
