--- a/about.html
+++ b/about.html
@@ -2,14 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>About | Style & Trend</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>About</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <header class="navbar">
-  <a href="index.html" class="logo">Style<span>&</span>Trend</a>
+  <h1 class="logo"><a href="index.html">Style<span>&</span>Trend</a></h1>
   <nav>
     <a href="index.html">Home</a>
     <a href="products.html">Products</a>
@@ -22,19 +21,26 @@
   <h1>About Us</h1>
 
   <p>
-    Founded in 2026, Style & Trend is a fashion brand based in Istanbul,
-    combining street culture with modern luxury.
+    Style & Trend was founded to bring premium fashion to everyone.
+    We believe confidence starts with style.
   </p>
 
+  <h2>Our Mission</h2>
   <p>
-    Our mission is to create timeless collections that reflect confidence,
-    individuality, and contemporary style.
+    Deliver modern fashion with honest pricing and quality.
   </p>
 
+  <h2>Our Vision</h2>
   <p>
-    Every product is designed with attention to detail, premium materials,
-    and a strong focus on comfort and aesthetics.
+    Become a global lifestyle brand.
   </p>
+
+  <h2>Our Values</h2>
+  <ul>
+    <li>Quality over quantity</li>
+    <li>Customer first</li>
+    <li>Sustainability</li>
+  </ul>
 </section>
 
 <footer>
