--- a/contact.html
+++ b/contact.html
@@ -2,14 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Contact | Style & Trend</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Contact</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <header class="navbar">
-  <a href="index.html" class="logo">Style<span>&</span>Trend</a>
+  <h1 class="logo"><a href="index.html">Style<span>&</span>Trend</a></h1>
   <nav>
     <a href="index.html">Home</a>
     <a href="products.html">Products</a>
@@ -19,10 +18,14 @@
 </header>
 
 <section class="contact-page">
-  <h1>Contact</h1>
-  <p>Istanbul, Turkey</p>
-  <p>📞 +90 532 847 29 61</p>
-  <p>✉️ info@styletrend.com</p>
+  <h1>Contact Us</h1>
+
+  <form class="contact-form">
+    <input type="text" placeholder="Name">
+    <input type="email" placeholder="Email">
+    <textarea placeholder="Message"></textarea>
+    <button class="btn">Send</button>
+  </form>
 </section>
 
 <footer>
